--- a/app/templates/vm/xml/mapper.xml.vm
+++ b/app/templates/vm/xml/mapper.xml.vm
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
-<mapper namespace="mapper.mysql.ruoyi.${ClassName}Mapper.xml">
+<mapper namespace="mapper/mysql/ruoyi/${ClassName}Mapper.xml">
     
     <!-- 通用查询结果列 -->
     <sql id="select${ClassName}Vo">
@@ -39,9 +39,6 @@
 #end
         </where>
         order by create_time desc
-        <if test="pageNum != null and pageSize != null">
-            limit #{offset}, #{pageSize}
-        </if>
     </select>
     
     <!-- 查询${functionName}详细 -->
